coding challenge from HackerRank

--- a/HackerRank/sock_merchant.ipynb
+++ b/HackerRank/sock_merchant.ipynb
@@ -6,8 +6,7 @@
       "name": "sock_merchant.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPK196eXEM0qTFxrGqE9+lz",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPK196eXEM0qTFxrGqE9+lz"
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/shaunhyp57/coding_practice/blob/master/HackerRank/sock_merchant.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
